# dataCleanup

./: .gitignore  LICENSE  README.md  mphd-orders-schema.yaml  pyproject.toml
data/sample/: sample_contacts.csv  schema.yaml
docs/: index.md  mkdocs.yml
docs/api/: index.md
docs/examples/: index.md
docs/guides/: configuration.md  getting-started.md
src/datacleanup/: __init__.py  cli.py
src/datacleanup/config/: __init__.py  schema.py
src/datacleanup/export/: __init__.py  csv_writer.py  db_loader.py  google_maps.py
src/datacleanup/ingestion/: __init__.py  csv_reader.py  schema_detector.py
src/datacleanup/matching/: __init__.py  column_matcher.py  record_matcher.py
src/datacleanup/merge/: __init__.py  resolver.py
src/datacleanup/normalization/: __init__.py  address.py  email.py  name.py  phone.py
tests/: __init__.py  test_column_matcher.py  test_csv_reader.py  test_normalization.py
