[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datacleanup"
version = "0.1.0"
description = "CSV ingestion utility with fuzzy matching, duplicate detection, and contact merging"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["csv", "data-cleaning", "fuzzy-matching", "deduplication", "etl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0",
    "rapidfuzz>=3.0.0",
    "phonenumbers>=8.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pandas-stubs>=2.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
datacleanup = "datacleanup.cli:app"

[project.urls]
Documentation = "https://github.com/yourusername/datacleanup#readme"
Repository = "https://github.com/yourusername/datacleanup"

[tool.hatch.build.targets.wheel]
packages = ["src/datacleanup"]

[tool.hatch.build.targets.sdist]
include = ["src/datacleanup"]

[tool.hatch.build]
sources = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/datacleanup --cov-report=term-missing"
